add toolbar button with popup
* added 'hello world' function to manipulate document body of currently vistited website

--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,35 @@
 {
-
   "manifest_version": 2,
   "name": "Broken Image Finder",
   "version": "0.1",
   "author": "Bastian Dupps",
-
   "description": "The scope of the Broken Image Finder WebExtension is to detect unavailable images by scanning the currently visited website and its embedded stylesheets.",
-
+  "homepage_url": "https://github.com/dupps/broken-image-finder",
   "applications": {
     "gecko": {
       "id": "bif@dupps.it"
     }
   },
-
   "icons": {
     "48": "icons/broken_image_48.png",
     "96": "icons/broken_image_96.png"
   },
-
+  "permissions": [
+    "activeTab"
+  ],
+  "browser_action": {
+    "default_icon": "icons/broken_image_36.png",
+    "default_title": "Broken Image Finder",
+    "default_popup": "popup/finder_results.html"
+  },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["finder.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "finder.js"
+      ]
     }
   ]
-
 }
